# sfml-ball-shooter

./: CMakeLists.txt  README.md
src/: main.cpp
src/Core/: Application.cpp  Application.hpp  Assets.cpp  Assets.hpp
src/Core/Containers/: Templates.cpp  Templates.hpp
src/Entity/: Cannon.cpp  Cannon.hpp  NumberSquare.cpp  NumberSquare.hpp  Projectile.cpp  Projectile.hpp
src/Entity/Base/: Animation.cpp  Animation.hpp  Entity.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp
src/Entity/Shapes/: SquareShape.cpp  SquareShape.hpp  StadiumShape.cpp  StadiumShape.hpp
src/State/: MenuState.cpp  MenuState.hpp  OptionsState.cpp  OptionsState.hpp  PlayState.cpp  PlayState.hpp
src/State/Base/: State.cpp  State.hpp
src/UI/: Button.cpp  Button.hpp  Toggle.cpp  Toggle.hpp
